# bcraft-test

./: .env-non-dev  Dockerfile  docker-compose.yml
bash/: app.sh
src/: .flake8  __init__.py  config.py  main.py  pyproject.toml
src/auth/: base_config.py  manager.py  models.py
src/migrations/: env.py
src/migrations/versions/: 2023-04-20_init.py
