[tool.poetry]
name = "server"
version = "0.1.0"
description = ""
authors = ["Roman Pavlyuchenko <romanpavlyuchenko@inbox.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.95.1"
gunicorn = "^20.1.0"
uvicorn = "^0.21.1"
alembic = "^1.10.3"
sqlalchemy = "^2.0.9"
asyncpg = "^0.27.0"
flake8 = "^6.0.0"
fastapi-users = {extras = ["sqlalchemy"], version = "^10.4.2"}
python-dotenv = "^1.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
